<resources>
    <string name="app_name">como_voce_mora</string>
    <string name="bt_continue">Continuar</string>
    <string name="start">Começar</string>
    <string name="instruction">Instruções</string>
    <string name="credit">Créditos</string>
    <string name="send_answers">Enviar Respostas</string>
    <string name="description_info_save">Se você não responder todas as perguntas, seus dados não poderão ser utilizados na pesquisa.</string>
    <string name="ok">Ok</string>
    <string name="description_what_is_this_research">Este ambiente digital foi elaborado com o intuito de avaliar COMO VOCÊ MORA de forma mais lúdica e interativa. Pretendemos através dessa ferramenta digital, compreender questões relativas ao seu modo de vida e maneira de morar nas diversas escalas de sua moradia: desde o bairro até sua casa. As informações coletadas irão compor um banco de dados sobre o morar contemporâneo, alimentando novos projetos e ações rumo à elevação da qualidade das moradias em nossas cidades.</string>
    <string name="title_what_is_this_research">O QUE É ESTA PESQUISA?</string>
    <string name="aboutyou">Sobre você</string>
    <string name="terms">Você está sendo convidado(a) a participar da pesquisa intitulada “COMO VOCÊ MORA? SISTEMA INTERATIVO DE AVALIAÇÃO PÓS-OCUPAÇÃO DA QUALIDADE DO HABITAR EM MEIOS DIGITAIS”, sob a responsabilidade dos pesquisadores Simone Barbosa Villa, Maria Adriana Vidigal de Lima, Viviane dos Guimarães Alvim Nunes, Rita de Cássia Pereira Saramago, Sabrina Maia Lemos, Fernando Garrefa, Rafaela Nunes Mendonça, Thais Castro Alves de Ávila, Abrão Osório Júnior, Isabella Gomes de Marco, Aline de Souza Lima Abreu e Miguel Henrique de Brito Pereira da Faculdade de Arquitetura e Urbanismo e Design (FAUeD) e da Faculdade de Computação (FACOM) da Universidade Federal de Uberlândia (UFU).\n\nEste questionário digital foi elaborado com o intuito de avaliar como você mora de forma mais lúdica e interativa. Pretendemos compreender questões relativas ao seu modo de vida e maneira de morar nas diversas escalas de sua moradia: desde o bairro até sua casa. As informações coletadas irão compor um banco de dados sobre o morar contemporâneo, alimentando novos projetos e ações rumo à elevação da qualidade das moradias em nossas cidades.\n\nO Termo de Consentimento Livre e Esclarecido será obtido pelo próprio sistema imediatamente antes da aplicação do questionário digital proposto na pesquisa, diretamente no aplicativo. Vale ressaltar que, nesse momento, o entrevistado tem um tempo para decidir se quer participar conf. item IV da Resol. CNS 466/12 ou Cap. III da Resol. 510/2016.\n\nNa sua participação, você responderá um questionário digital com perguntas relativas à sua satisfação em relação à sua moradia. Em nenhum momento você será identificado. Os resultados da pesquisa serão publicados e ainda assim a sua identidade será preservada. Você não terá nenhum gasto nem ganho financeiro por participar na pesquisa. \n\nSobre os riscos da pesquisa, os questionários propostos tratam de pesquisas de satisfação em relação à moradia, com perguntas de cunho cotidiano doméstico que não apresentam nenhum risco à saúde física e psicológica de seus respondentes e entrevistadores. Na elaboração dos questionários, todos os cuidados foram tomados para assegurar a integridade física e psicológica de seus respondentes. O questionário somente será aplicado após o aceite do respondente em participar da enquete. Há riscos relacionados à possível identificação dos participantes, sendo que, para evitá-los, o sistema de avaliação atribui um código genérico a cada questionário aplicado, de maneira a conservar o anonimato dos respondentes. \n\n Os benefícios serão: (i) a proposição de um SISTEMA INTERATIVO DE AVALIAÇÃO PÓS-OCUPAÇÃO EM MEIOS DIGITAIS da qualidade habitacional que possa retroalimentar projetos futuros, enfocando aspectos objetivos e subjetivos do morar, bem como diferentes escalas de análise (produto casa, relação comportamental dos usuários com a moradia e inserção da habitação no meio urbano; ii) O estabelecimento, a partir das informações coletadas pelo sistema,de BANCOS DE DADOS SOBRE O MORAR, contendo informações estatísticas e científicas que poderão ampliar a qualidade dos projetos na área, bem como nortear o estabelecimento de políticas públicas, normas e legislações.\n\n Você é livre para deixar de participar da pesquisa a qualquer momento sem qualquer prejuízo ou coação.</string>
    <string name="a">A</string>
    <string name="z">Z</string>
    <string name="firstplace">1°Lugar</string>
    <string name="secondplace">2°Lugar</string>
    <string name="thirdplace">3°Lugar</string>
    <string name="forthplace">4°Lugar</string>
    <string name="whomyoulive_question">Selecione quem mora com você e clique em avançar.\n Se você mora só, apenas clique em avançar.</string>
    <string name="touch_next">Toque para Avançar</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="schooling_question">Até que ano da escola você cursou?</string>
    <string name="family_incoming"><![CDATA[Qual sua renda familiar em reais? Lembre-se que é a renda de todos os moradores somada. Se você não souber ou quiser responder,apenas clique em avançar.]]></string>
    <string name="please">Por favor, não abreviar e não acentuar!</string>
    <string name="country_question">Muito bem. Agora vamos falar sobre sua moradia atual. Em qual estado você mora?</string>
    <string name="name_default">name</string>
    <string name="wife">Esposa/Parceira</string>
    <string name="daughter">Filha</string>
    <string name="mother">Mae</string>
    <string name="grandmother">Avó</string>
    <string name="sister">Irmã</string>
    <string name="friends">Amigo(a)/colega</string>
    <string name="husband">Marido/Parceiro</string>
    <string name="son">Filho</string>
    <string name="father">Pai</string>
    <string name="grandfather">Avô</string>
    <string name="brother">Irmão</string>
    <string name="other_relatives">Outro parente</string>
    <string name="pets">Animal estimação</string>
    <string name="house">Casa</string>
    <string name="apartament">Apartamento</string>
    <string name="address_question">Seu endereço:</string>
    <string name="address_please">Por favor, não abreviar e não acentuar!</string>
    <string name="equipaments_question">Indique quais dos equipamentos urbanos abaixo estão presentes no seu bairro:</string>
    <string name="saude">Saúde</string>
    <string name="escola">Educação</string>
    <string name="cultura">Cultura</string>
    <string name="lazer">Lazer</string>
    <string name="esporte">Esporte</string>
    <string name="seguranca">Segurança</string>
    <string name="comercial_question2">De qual tipo de estabelecimento comercial/serviço você sente falta no seu bairro?</string>
    <string name="comercial_question">Em relação a presença de comércios, seu bairro é:</string>
    <string name="pleaseno">Por favor, não abreviar e não acentuar!</string>
    <string name="praça">Praca</string>
    <string name="academia_livre">Academia Livre</string>
    <string name="parque">Parque</string>
    <string name="quadra">Quadra</string>
    <string name="zero_a_um">0 a 1 ano</string>
    <string name="um_a_dois">1 a 2 anos</string>
    <string name="dois_a_tres">2 a 3 anos</string>
    <string name="tres_a_quatro">3 a 4 anos</string>
    <string name="mais_de_cinco">5 anos ou mais</string>
    <string name="games_room">Salão de jogos</string>
    <string name="gym">Academia</string>
    <string name="party_room">Salão de festas</string>
    <string name="piscinapluseighteen">Piscina Adulto</string>
    <string name="gourment_space">Espaço gourmet</string>
    <string name="playground">Playground</string>
    <string name="square">Quadra</string>
    <string name="child_pool">Piscina infantil</string>
    <string name="casagerminada">Casa geminada</string>
    <string name="sobrado">Sobrado</string>
    <string name="vila">Casa de vila</string>
    <string name="terrea">Casa térrea</string>
    <string name="fundo">Casa fundo</string>
    <string name="duplex">Duplex</string>
    <string name="triplex">Triplex</string>
    <string name="quitinete">Quitinete</string>
    <string name="loft">Loft</string>
    <string name="convencional">Convencional</string>
    <string name="cobertura">Cobertura</string>
    <string name="previous_home">Qual era o tipo da sua moradia anterior?</string>
    <string name="hadchoose_question">Você escolheu viver nessa moradia ou não teve escolha?</string>
    <string name="hadchoose_choose">Escolhi</string>
    <string name="hadchoose_nope">Não tive escolha</string>
    <string name="division_wall">Muro</string>
    <string name="division_viva">Cerca Viva</string>
    <string name="division_grades">Grades</string>
    <string name="division_none">Nenhuma</string>
    <string name="resident_partner">Parcerio(a)</string>
    <string name="resident_son">Filho(a)</string>
    <string name="resident_father">Mãe/Pai</string>
    <string name="resident_grandfather">Avô(ó)</string>
    <string name="resident_sister">Irmã(ão)</string>
    <string name="resident_other">Outro</string>
    <string name="area_servico">Área de serviço</string>
    <string name="banheiro">Banheiro</string>
    <string name="decasal">D. Casal</string>
    <string name="desolteiro">D. Solteiro</string>
    <string name="estar">Sala de Estar</string>
    <string name="jantar">Sala de Jantar</string>
    <string name="varanda">Varanda</string>
    <string name="cozinha">Cozinha</string>
    <string name="estender_a_roupa">ESTENDER A ROUPA</string>
    <string name="armazenar_coisas">ARMAZENAR COISAS</string>
    <string name="passar_a_roupa">PASSAR A ROUPA</string>
    <string name="receber_convidados">RECEBER CONVIDADOS</string>
    <string name="usar_computador">USAR COMPUTADOR/CELULAR</string>
    <string name="trabalhos_manuais">FAZER TRABALHOS MANUAIS</string>
    <string name="tocar">TOCAR INSTRUMENTO</string>
    <string name="ler">LER/ESTUDAR</string>
    <string name="lavar_roupa">LAVAR ROUPA</string>
    <string name="outros">OUTROS</string>
    <string name="assistir_tv">ASSISTIR TV</string>
    <string name="nenhum">NENHUM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="why_do_you_save_water_title">Você economiza água, por que?</string>
    <string name="organic_1">Sacola plástica</string>
    <string name="organic_2">Bolsa reutilizável</string>
    <string name="organic_3">Caixa de papelão</string>
    <string name="organic_4">Outros</string>
    <string name="equipment_1">Máquina lavar com\nreuso</string>
    <string name="equipment_2">Caixa d água para\nreuso</string>
    <string name="equipment_3">Descarga com duplo\nfluxo</string>
    <string name="equipment_4">Vaso com caixa\nacoplada</string>
    <string name="equipment_5">Torneira econômica</string>
    <string name="equipment_6">Outros</string>
    <string name="solar_1">Placas solares</string>
    <string name="solar_2">Painés\nfotovoltaicos</string>
    <string name="solar_3">Ambos os\nsistemas</string>
    <string name="solar_4">Nenhum dos dois\nsistemas</string>
    <string name="satisfaction_room_1">Tamanho</string>
    <string name="establishment_1">BANCO</string>
    <string name="establishment_2">LOTÉRICA</string>
    <string name="establishment_3">MERCADO</string>
    <string name="establishment_4">LOJA</string>
    <string name="establishment_5">FARMÁCIA</string>
    <string name="establishment_6">POSTO DE GASOLINA</string>
    <string name="establishment_7">ACADEMIA</string>
    <string name="establishment_8">PADARIA</string>
    <string name="establishment_9">AÇOUGUE</string>
    <string name="establishment_10">RESTAURANTE</string>
    <string name="establishment_11">OUTROS</string>
    <string name="establishment_12">NENHUM</string>
</resources>