<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueLight2">

    <include layout="@layout/fragment_mr_clipboard_ball" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintEnd_toStartOf="@id/bt_next"
        app:layout_constraintStart_toEndOf="@id/bt_back"
        app:layout_constraintTop_toBottomOf="@id/tv_question">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvBanco"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/banco"
                app:nameItem="@string/establishment_1"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvLoterica"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/loterica"
                app:nameItem="@string/establishment_2"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvMercado"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/supermercado"
                app:nameItem="@string/establishment_3"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvLoja"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/loja"
                app:nameItem="@string/establishment_4"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvPosto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/posto_gasolina"
                app:nameItem="@string/establishment_6"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvFarmacia"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/farmacia"
                app:nameItem="@string/establishment_5"
                app:textColor="@color/colorBlueLight2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@id/tv_question"
            android:orientation="horizontal">

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvAcademia"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/academia"
                app:nameItem="@string/establishment_7"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvPadaria"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/padaria"
                app:nameItem="@string/establishment_8"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvAcougue"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/acougue"
                app:nameItem="@string/establishment_9"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvRestaurante"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/restaurante"
                app:nameItem="@string/establishment_10"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvOutros"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/outros"
                app:nameItem="@string/establishment_11"
                app:textColor="@color/colorBlueLight2" />

            <br.com.como_voce_mora.custom.CustomSelectedView
                android:id="@+id/csvNenhum"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                app:imageItem="@drawable/nenhum"
                app:nameItem="@string/establishment_12"
                app:textColor="@color/colorBlueLight2" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>