<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPurpleLight">

    <include layout="@layout/fragment_mr_clipboard_ball" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-40dp"
        android:layout_marginLeft="-40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/bt_next"
        app:layout_constraintStart_toEndOf="@id/bt_back"
        app:layout_constraintTop_toBottomOf="@id/iv_mr_clipboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:gravity="center"
                android:orientation="horizontal">

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:imageItem="@drawable/moradores_01"
                    app:nameItem="@string/wife"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_02"
                    app:nameItem="@string/daughter"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv3"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_03"
                    app:nameItem="@string/mother"
                    app:textColor="@color/colorBlack"/>

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv4"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_04"
                    app:nameItem="@string/grandmother"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv5"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_05"
                    app:nameItem="@string/sister"
                    app:textColor="@color/colorBlack"/>

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_06"
                    app:nameItem="@string/friends"
                    app:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv7"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    app:imageItem="@drawable/moradores_07"
                    app:nameItem="@string/husband"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv8"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_08"
                    app:nameItem="@string/son"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv9"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_09"
                    app:nameItem="@string/father"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv10"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_10"
                    app:nameItem="@string/grandfather"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv11"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_11"
                    app:nameItem="@string/brother"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv12"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_12"
                    app:nameItem="@string/other_relatives"
                    app:textColor="@color/colorBlack" />

                <br.com.como_voce_mora.custom.CustomSelectedView
                    android:id="@+id/csv13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    app:imageItem="@drawable/moradores_13"
                    app:nameItem="@string/pets"
                    app:textColor="@color/colorBlack" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>