<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenLight">

    <include layout="@layout/fragment_mr_clipboard_ball" />

    <br.com.como_voce_mora.custom.CustomSelectedView
        android:id="@+id/cvsSolarPlates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:imageItem="@drawable/sacolaplastica"
        app:layout_constraintBottom_toBottomOf="@id/bt_next"
        app:layout_constraintEnd_toStartOf="@id/csvApartament"
        app:layout_constraintStart_toEndOf="@id/iv_mr_clipboard"
        app:layout_constraintTop_toTopOf="@id/bt_next"
        app:nameItem="@string/organic_1" />

    <br.com.como_voce_mora.custom.CustomSelectedView
        android:id="@+id/csvPhotovoltaicPanels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:imageItem="@drawable/sacolareciclavel"
        app:layout_constraintBottom_toBottomOf="@id/bt_next"
        app:layout_constraintEnd_toStartOf="@id/bt_next"
        app:layout_constraintStart_toEndOf="@id/cvsSolarPlates"
        app:layout_constraintTop_toTopOf="@id/bt_next"
        app:nameItem="@string/organic_2" />

    <br.com.como_voce_mora.custom.CustomSelectedView
        android:id="@+id/csvSystems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:imageItem="@drawable/caixapapelao"
        app:layout_constraintTop_toBottomOf="@id/cvsSolarPlates"
        app:layout_constraintStart_toStartOf="@id/cvsSolarPlates"
        app:layout_constraintEnd_toEndOf="@id/cvsSolarPlates"
        app:nameItem="@string/organic_3" />

    <br.com.como_voce_mora.custom.CustomSelectedView
        android:id="@+id/cvsNone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:imageItem="@drawable/interrogacao"
        app:layout_constraintTop_toBottomOf="@id/csvPhotovoltaicPanels"
        app:layout_constraintStart_toStartOf="@id/csvPhotovoltaicPanels"
        app:layout_constraintEnd_toEndOf="@id/csvPhotovoltaicPanels"
        app:nameItem="@string/organic_4" />


</androidx.constraintlayout.widget.ConstraintLayout>